--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
     "@types/uuid": "^9.0.8",
+    "caniuse-lite": "^1.0.30001754",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -50,6 +51,7 @@
     "framer-motion": "^12.10.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "maplibre-gl": "^5.12.0",
     "next-themes": "^0.3.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
@@ -57,6 +59,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
+    "react-map-gl": "^8.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
