--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lucide-react": "^0.462.0",
     "maplibre-gl": "^5.12.0",
     "next-themes": "^0.3.0",
+    "ogl": "^1.0.11",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
